cluster/kubernetes/core/observability/grafana-operator/instance/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app grafana
  annotations:
    gethomepage.dev/name: *app
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: observability
    gethomepage.dev/icon: sh-grafana-light.png
    gethomepage.dev/pod-selector: app=grafana
spec:
  hostnames:
    - graf.stevewm.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
